syntax = "proto3";

package gen;

option go_package = "./gen";

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc GetNotificationStatus (GetNotificationStatusRequest) returns (GetNotificationStatusResponse);
}

message SendNotificationRequest {
  string type = 1;
  bytes payload = 2;
}

message SendNotificationResponse {
  string id = 1;
  string status = 2;
}

message GetNotificationStatusRequest {
  string id = 1;
}

message GetNotificationStatusResponse {
  string id = 1;
  string status = 2;
  string created_at = 3;
  string updated_at = 4;
}
